Add delegation utils

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -336,7 +336,8 @@ BITCOIN_CORE_H = \
   qtum/qtumutils.h \
   qtum/qtumdelegation.h \
   qtum/qtumtoken.h \
-  qtum/qtumledger.h
+  qtum/qtumledger.h \
+  qtum/delegationutils.h
 
 obj/build.h: FORCE
 	@$(MKDIR_P) $(builddir)/obj
@@ -643,6 +644,7 @@ libbitcoin_common_a_SOURCES = \
   qtum/qtumDGP.cpp \
   qtum/qtumtoken.cpp \
   qtum/qtumdelegation.cpp \
+  qtum/delegationutils.cpp \
   util/contractabi.cpp \
   libff/libff/algebra/curves/public_params.hpp \
   libff/libff/algebra/curves/curve_utils.hpp \
