--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -14,11 +14,27 @@ EXTRA_LIBRARIES += qt/libbitcoinqt.a
 include Makefile.qt_locale.include
 
 QT_FORMS_UI = \
+  qt/forms/adddelegationpage.ui \
   qt/forms/addressbookpage.ui \
+  qt/forms/addsuperstakerpage.ui \
+  qt/forms/addtokenpage.ui \
   qt/forms/askpassphrasedialog.ui \
+  qt/forms/callcontract.ui \
   qt/forms/coincontroldialog.ui \
   qt/forms/createwalletdialog.ui \
+  qt/forms/contractbookpage.ui \
+  qt/forms/contractresult.ui \
+  qt/forms/createcontract.ui \
+  qt/forms/delegationitemwidget.ui \
+  qt/forms/delegationpage.ui \
+  qt/forms/delegationsstakerdialog.ui \
+  qt/forms/derivationpathdialog.ui \
   qt/forms/editaddressdialog.ui \
+  qt/forms/editcontractinfodialog.ui \
+  qt/forms/editsuperstakerdialog.ui \
+  qt/forms/hardwaredevicedialog.ui \
+  qt/forms/hardwarekeystoredialog.ui \
+  qt/forms/hardwaresigntxdialog.ui \
   qt/forms/helpmessagedialog.ui \
   qt/forms/intro.ui \
   qt/forms/modaloverlay.ui \
@@ -26,17 +42,39 @@ QT_FORMS_UI = \
   qt/forms/optionsdialog.ui \
   qt/forms/overviewpage.ui \
   qt/forms/psbtoperationsdialog.ui \
+  qt/forms/qrctoken.ui \
   qt/forms/receivecoinsdialog.ui \
   qt/forms/receiverequestdialog.ui \
+  qt/forms/receivetokenpage.ui \
+  qt/forms/removedelegationpage.ui \
+  qt/forms/restoredialog.ui \
   qt/forms/debugwindow.ui \
+  qt/forms/stakepage.ui \
   qt/forms/sendcoinsdialog.ui \
   qt/forms/sendcoinsentry.ui \
+  qt/forms/sendtocontract.ui \
+  qt/forms/sendtokenpage.ui \
   qt/forms/signverifymessagedialog.ui \
+  qt/forms/splitutxopage.ui \
+  qt/forms/superstakeritemwidget.ui \
+  qt/forms/superstakerconfigdialog.ui \
+  qt/forms/superstakerpage.ui \
+  qt/forms/titlebar.ui \
+  qt/forms/tokendescdialog.ui \
+  qt/forms/tokenitemwidget.ui \
   qt/forms/transactiondescdialog.ui
 
 QT_MOC_CPP = \
+  qt/moc_abifunctionfield.cpp \
+  qt/moc_abiparam.cpp \
+  qt/moc_abiparamitem.cpp \
+  qt/moc_abiparamsfield.cpp \
+  qt/moc_adddelegationpage.cpp \
   qt/moc_addressbookpage.cpp \
+  qt/moc_addressfield.cpp \
   qt/moc_addresstablemodel.cpp \
+  qt/moc_addsuperstakerpage.cpp \
+  qt/moc_addtokenpage.cpp \
   qt/moc_askpassphrasedialog.cpp \
   qt/moc_createwalletdialog.cpp \
   qt/moc_bantablemodel.cpp \
@@ -45,17 +83,36 @@ QT_MOC_CPP = \
   qt/moc_bitcoinamountfield.cpp \
   qt/moc_bitcoingui.cpp \
   qt/moc_bitcoinunits.cpp \
+  qt/moc_callcontract.cpp \
   qt/moc_clientmodel.cpp \
   qt/moc_coincontroldialog.cpp \
   qt/moc_coincontroltreewidget.cpp \
+  qt/moc_contractbookpage.cpp \
+  qt/moc_contractresult.cpp \
+  qt/moc_contracttablemodel.cpp \
+  qt/moc_createcontract.cpp \
   qt/moc_csvmodelwriter.cpp \
+  qt/moc_delegationfilterproxy.cpp \
+  qt/moc_delegationitemmodel.cpp \
+  qt/moc_delegationitemwidget.cpp \
+  qt/moc_delegationlistwidget.cpp \
+  qt/moc_delegationpage.cpp \
+  qt/moc_delegationsstakerdialog.cpp \
+  qt/moc_delegationstakeritemmodel.cpp \
+  qt/moc_derivationpathdialog.cpp \
   qt/moc_editaddressdialog.cpp \
+  qt/moc_editcontractinfodialog.cpp \
+  qt/moc_editsuperstakerdialog.cpp \
+  qt/moc_hardwaredevicedialog.cpp \
+  qt/moc_hardwarekeystoredialog.cpp \
+  qt/moc_hardwaresigntxdialog.cpp \
   qt/moc_guiutil.cpp \
   qt/moc_initexecutor.cpp \
   qt/moc_intro.cpp \
   qt/moc_macdockiconhandler.cpp \
   qt/moc_macnotificationhandler.cpp \
   qt/moc_modaloverlay.cpp \
+  qt/moc_navigationbar.cpp \
   qt/moc_notificator.cpp \
   qt/moc_openuridialog.cpp \
   qt/moc_optionsdialog.cpp \
@@ -66,16 +123,43 @@ QT_MOC_CPP = \
   qt/moc_paymentserver.cpp \
   qt/moc_psbtoperationsdialog.cpp \
   qt/moc_qrimagewidget.cpp \
+  qt/moc_qrctoken.cpp \
+  qt/moc_qswitchcontrol.cpp \
   qt/moc_qvalidatedlineedit.cpp \
+  qt/moc_qvalidatedtextedit.cpp \
   qt/moc_qvaluecombobox.cpp \
   qt/moc_receivecoinsdialog.cpp \
   qt/moc_receiverequestdialog.cpp \
+  qt/moc_receivetokenpage.cpp \
   qt/moc_recentrequeststablemodel.cpp \
+  qt/moc_removedelegationpage.cpp \
+  qt/moc_restoredialog.cpp \
   qt/moc_rpcconsole.cpp \
+  qt/moc_stakepage.cpp \
+  qt/moc_stakerdelegationview.cpp \
   qt/moc_sendcoinsdialog.cpp \
   qt/moc_sendcoinsentry.cpp \
+  qt/moc_sendtocontract.cpp \
+  qt/moc_sendtokenpage.cpp \
   qt/moc_signverifymessagedialog.cpp \
   qt/moc_splashscreen.cpp \
+  qt/moc_splitutxopage.cpp \
+  qt/moc_superstakeritemwidget.cpp \
+  qt/moc_superstakerlistwidget.cpp \
+  qt/moc_superstakerconfigdialog.cpp \
+  qt/moc_superstakerpage.cpp \
+  qt/moc_superstakeritemmodel.cpp \
+  qt/moc_tabbarinfo.cpp \
+  qt/moc_titlebar.cpp \
+  qt/moc_tokenamountfield.cpp \
+  qt/moc_tokendescdialog.cpp \
+  qt/moc_tokenitemmodel.cpp \
+  qt/moc_tokenfilterproxy.cpp \
+  qt/moc_tokentransactionview.cpp \
+  qt/moc_tokentransactiontablemodel.cpp \
+  qt/moc_tokentransactiondesc.cpp \
+  qt/moc_tokenitemwidget.cpp \
+  qt/moc_tokenlistwidget.cpp \
   qt/moc_trafficgraphwidget.cpp \
   qt/moc_transactiondesc.cpp \
   qt/moc_transactiondescdialog.cpp \
@@ -85,6 +169,10 @@ QT_MOC_CPP = \
   qt/moc_transactionview.cpp \
   qt/moc_utilitydialog.cpp \
   qt/moc_walletcontroller.cpp \
+  qt/moc_qtumversionchecker.cpp \
+  qt/moc_qtumhwitool.cpp \
+  qt/moc_waitmessagebox.cpp \
+  qt/moc_hardwaresigntx.cpp \
   qt/moc_walletframe.cpp \
   qt/moc_walletmodel.cpp \
   qt/moc_walletview.cpp
@@ -98,7 +186,12 @@ QT_MOC = \
   qt/bitcoinamountfield.moc \
   qt/intro.moc \
   qt/overviewpage.moc \
-  qt/rpcconsole.moc
+  qt/rpcconsole.moc \
+  qt/tokenamountfield.moc \
+  qt/tokenitemmodel.moc \
+  qt/delegationitemmodel.moc \
+  qt/superstakeritemmodel.moc \
+  qt/walletmodel.moc
 
 QT_QRC_CPP = qt/qrc_bitcoin.cpp
 QT_QRC = qt/bitcoin.qrc
@@ -106,8 +199,16 @@ QT_QRC_LOCALE_CPP = qt/qrc_bitcoin_locale.cpp
 QT_QRC_LOCALE = qt/bitcoin_locale.qrc
 
 BITCOIN_QT_H = \
+  qt/abifunctionfield.h \
+  qt/abiparam.h \
+  qt/abiparamitem.h \
+  qt/abiparamsfield.h \
+  qt/adddelegationpage.h \
   qt/addressbookpage.h \
+  qt/addressfield.h \
   qt/addresstablemodel.h \
+  qt/addsuperstakerpage.h \
+  qt/addtokenpage.h \
   qt/askpassphrasedialog.h \
   qt/bantablemodel.h \
   qt/bitcoin.h \
@@ -115,12 +216,33 @@ BITCOIN_QT_H = \
   qt/bitcoinamountfield.h \
   qt/bitcoingui.h \
   qt/bitcoinunits.h \
+  qt/callcontract.h \
   qt/clientmodel.h \
   qt/coincontroldialog.h \
   qt/coincontroltreewidget.h \
   qt/createwalletdialog.h \
+  qt/contractutil.h \
+  qt/contractbookpage.h \
+  qt/contractresult.h \
+  qt/contracttablemodel.h \
+  qt/createcontract.h \
   qt/csvmodelwriter.h \
+  qt/delegationfilterproxy.h \
+  qt/delegationitemwidget.h \
+  qt/delegationlistwidget.h \
+  qt/delegationitemmodel.h \
+  qt/delegationpage.h \
+  qt/delegationsstakerdialog.h \
+  qt/delegationstakeritemmodel.h \
+  qt/derivationpathdialog.h \
   qt/editaddressdialog.h \
+  qt/editcontractinfodialog.h \
+  qt/editsuperstakerdialog.h \
+  qt/eventlog.h \
+  qt/execrpccommand.h \
+  qt/hardwaredevicedialog.h \
+  qt/hardwarekeystoredialog.h \
+  qt/hardwaresigntxdialog.h \
   qt/guiconstants.h \
   qt/guiutil.h \
   qt/initexecutor.h \
@@ -129,6 +251,7 @@ BITCOIN_QT_H = \
   qt/macnotificationhandler.h \
   qt/macos_appnap.h \
   qt/modaloverlay.h \
+  qt/navigationbar.h \
   qt/networkstyle.h \
   qt/notificator.h \
   qt/openuridialog.h \
@@ -141,7 +264,10 @@ BITCOIN_QT_H = \
   qt/platformstyle.h \
   qt/psbtoperationsdialog.h \
   qt/qrimagewidget.h \
+  qt/qrctoken.h \
+  qt/qswitchcontrol.h \
   qt/qvalidatedlineedit.h \
+  qt/qvalidatedtextedit.h \
   qt/qvaluecombobox.h \
   qt/receivecoinsdialog.h \
   qt/receiverequestdialog.h \
@@ -152,7 +278,28 @@ BITCOIN_QT_H = \
   qt/sendcoinsrecipient.h \
   qt/signverifymessagedialog.h \
   qt/splashscreen.h \
+  qt/splitutxopage.h \
+  qt/stakepage.h \
+  qt/stakerdelegationview.h \
   qt/styleSheet.h \
+  qt/superstakeritemwidget.h \
+  qt/superstakeritemmodel.h \
+  qt/superstakerlistwidget.h \
+  qt/superstakerconfigdialog.h \
+  qt/superstakerpage.h \
+  qt/tabbarinfo.h \
+  qt/titlebar.h \
+  qt/token.h \
+  qt/tokenamountfield.h \
+  qt/tokendescdialog.h \
+  qt/tokenitemmodel.h \
+  qt/tokenfilterproxy.h \
+  qt/tokentransactionview.h \
+  qt/tokentransactionrecord.h \
+  qt/tokentransactiontablemodel.h \
+  qt/tokentransactiondesc.h \
+  qt/tokenitemwidget.h \
+  qt/tokenlistwidget.h \
   qt/trafficgraphwidget.h \
   qt/transactiondesc.h \
   qt/transactiondescdialog.h \
@@ -163,11 +310,16 @@ BITCOIN_QT_H = \
   qt/transactionview.h \
   qt/utilitydialog.h \
   qt/walletcontroller.h \
+  qt/qtumversionchecker.h \
+  qt/waitmessagebox.h \
   qt/walletframe.h \
   qt/walletmodel.h \
   qt/walletmodeltransaction.h \
   qt/walletview.h \
-  qt/winshutdownmonitor.h
+  qt/winshutdownmonitor.h \
+  qt/qtumpushbutton.h \
+  qt/qtumhwitool.h \
+  qt/hardwaresigntx.h
 
 QT_RES_FONTS = \
   qt/res/fonts/RobotoMono-Bold.ttf
@@ -259,10 +411,13 @@ BITCOIN_QT_BASE_CPP = \
   qt/bitcoinunits.cpp \
   qt/clientmodel.cpp \
   qt/csvmodelwriter.cpp \
+  qt/delegationitemmodel.cpp \
+  qt/delegationstakeritemmodel.cpp \
   qt/guiutil.cpp \
   qt/initexecutor.cpp \
   qt/intro.cpp \
   qt/modaloverlay.cpp \
+  qt/navigationbar.cpp \
   qt/networkstyle.cpp \
   qt/notificator.cpp \
   qt/optionsdialog.cpp \
@@ -270,42 +425,103 @@ BITCOIN_QT_BASE_CPP = \
   qt/peertablemodel.cpp \
   qt/peertablesortproxy.cpp \
   qt/platformstyle.cpp \
+  qt/qswitchcontrol.cpp \
   qt/qvalidatedlineedit.cpp \
+  qt/qvalidatedtextedit.cpp \
   qt/qvaluecombobox.cpp \
   qt/rpcconsole.cpp \
   qt/splashscreen.cpp \
+  qt/splitutxopage.cpp \
   qt/styleSheet.cpp \
+  qt/tabbarinfo.cpp \
+  qt/titlebar.cpp \
+  qt/token.cpp \
+  qt/tokenamountfield.cpp \
+  qt/tokenitemmodel.cpp \
+  qt/superstakeritemmodel.cpp \
   qt/trafficgraphwidget.cpp \
-  qt/utilitydialog.cpp
+  qt/utilitydialog.cpp \
+  qt/qtumversionchecker.cpp \
+  qt/qtumpushbutton.cpp \
+  qt/qtumhwitool.cpp \
+  qt/hardwaresigntx.cpp
 
 BITCOIN_QT_WINDOWS_CPP = qt/winshutdownmonitor.cpp
 
 BITCOIN_QT_WALLET_CPP = \
+  qt/abifunctionfield.cpp \
+  qt/abiparam.cpp \
+  qt/abiparamitem.cpp \
+  qt/abiparamsfield.cpp \
+  qt/adddelegationpage.cpp \
   qt/addressbookpage.cpp \
+  qt/addressfield.cpp \
   qt/addresstablemodel.cpp \
+  qt/addsuperstakerpage.cpp \
+  qt/addtokenpage.cpp \
   qt/askpassphrasedialog.cpp \
+  qt/callcontract.cpp \
   qt/coincontroldialog.cpp \
   qt/coincontroltreewidget.cpp \
+  qt/contractutil.cpp \
+  qt/contractbookpage.cpp \
+  qt/contractresult.cpp \
+  qt/contracttablemodel.cpp \
+  qt/createcontract.cpp \
+  qt/delegationfilterproxy.cpp \
+  qt/delegationitemwidget.cpp \
+  qt/delegationlistwidget.cpp \
+  qt/delegationpage.cpp \
+  qt/delegationsstakerdialog.cpp \
+  qt/derivationpathdialog.cpp \
+  qt/eventlog.cpp \
+  qt/execrpccommand.cpp \
   qt/createwalletdialog.cpp \
   qt/editaddressdialog.cpp \
+  qt/editcontractinfodialog.cpp \
+  qt/editsuperstakerdialog.cpp \
+  qt/hardwaredevicedialog.cpp \
+  qt/hardwarekeystoredialog.cpp \
+  qt/hardwaresigntxdialog.cpp \
   qt/openuridialog.cpp \
   qt/overviewpage.cpp \
   qt/paymentserver.cpp \
   qt/psbtoperationsdialog.cpp \
+  qt/qrctoken.cpp \
   qt/qrimagewidget.cpp \
   qt/receivecoinsdialog.cpp \
   qt/receiverequestdialog.cpp \
+  qt/receivetokenpage.cpp \
   qt/recentrequeststablemodel.cpp \
+  qt/removedelegationpage.cpp \
+  qt/restoredialog.cpp \
+  qt/stakepage.cpp \
+  qt/stakerdelegationview.cpp \
   qt/sendcoinsdialog.cpp \
   qt/sendcoinsentry.cpp \
+  qt/sendtocontract.cpp \
+  qt/sendtokenpage.cpp \
   qt/signverifymessagedialog.cpp \
+  qt/superstakeritemwidget.cpp \
+  qt/superstakerlistwidget.cpp \
+  qt/superstakerconfigdialog.cpp \
+  qt/superstakerpage.cpp \
+  qt/tokendescdialog.cpp \
+  qt/tokenfilterproxy.cpp \
+  qt/tokentransactionview.cpp \
+  qt/tokentransactionrecord.cpp \
+  qt/tokentransactiontablemodel.cpp \
+  qt/tokentransactiondesc.cpp \
   qt/transactiondesc.cpp \
   qt/transactiondescdialog.cpp \
   qt/transactionfilterproxy.cpp \
   qt/transactionrecord.cpp \
   qt/transactiontablemodel.cpp \
   qt/transactionview.cpp \
+  qt/tokenitemwidget.cpp \
+  qt/tokenlistwidget.cpp \
   qt/walletcontroller.cpp \
+  qt/waitmessagebox.cpp \
   qt/walletframe.cpp \
   qt/walletmodel.cpp \
   qt/walletmodeltransaction.cpp \
@@ -321,7 +537,7 @@ endif # ENABLE_WALLET
 
 QT_RES_ANIMATION = $(wildcard $(srcdir)/qt/res/animation/spinner-*.png)
 
-QT_RES_TOKENS = qt/res/tokens/6b8bf98ff497c064e8f0bde13e0c4f5ed5bf8ce7.png \
+RES_TOKENS = qt/res/tokens/6b8bf98ff497c064e8f0bde13e0c4f5ed5bf8ce7.png \
 qt/res/tokens/9d3d4cc1986d81f9109f2b091b7732e7d9bcf63b.png \
 qt/res/tokens/57931faffdec114056a49adfcaa1caac159a1a25.png \
 qt/res/tokens/09800417b097c61b9fd26b3ddde4238304a110d5.png \
@@ -333,7 +549,7 @@ qt/res/tokens/f2033ede578e17fa6231047265010445bca8cf1c.png \
 qt/res/tokens/f2703e93f87b846a7aacec1247beaec1c583daa4.png \
 qt/res/tokens/fe59cbc1704e89a698571413a81f0de9d8f00c69.png
 
-QT_RES_STYLES = qt/res/styles/theme1/buttontransparentbordered.css \
+RES_STYLES = qt/res/styles/theme1/buttontransparentbordered.css \
 qt/res/styles/theme1/buttondark.css \
 qt/res/styles/theme1/navgroupbutton.css \
 qt/res/styles/theme1/navbutton.css \
@@ -449,7 +665,7 @@ qt_libbitcoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 qt_libbitcoinqt_a_OBJCXXFLAGS = $(AM_OBJCXXFLAGS) $(QT_PIE_FLAGS)
 
 qt_libbitcoinqt_a_SOURCES = $(BITCOIN_QT_CPP) $(BITCOIN_QT_H) $(QT_FORMS_UI) \
-  $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(QT_RES_TOKENS) $(QT_RES_STYLES)
+  $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(RES_TOKENS) $(RES_STYLES) $(RES_LEDGER)
 if TARGET_DARWIN
   qt_libbitcoinqt_a_SOURCES += $(BITCOIN_MM)
 endif
@@ -525,7 +741,7 @@ $(QT_QRC_LOCALE_CPP): $(QT_QRC_LOCALE) $(QT_QM)
 	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(RCC) -name bitcoin_locale --format-version 1 $(@D)/temp_$(<F) > $@
 	@rm $(@D)/temp_$(<F)
 
-$(QT_QRC_CPP): $(QT_QRC) $(QT_FORMS_H) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(QT_RES_TOKENS) $(QT_RES_STYLES)
+$(QT_QRC_CPP): $(QT_QRC) $(QT_FORMS_H) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(RES_TOKENS) $(RES_STYLES) $(RES_LEDGER)
 	@test -f $(RCC)
 	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(RCC) -name bitcoin --format-version 1 $< > $@
 
