--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -271,10 +271,15 @@ BITCOIN_QT_H = \
   qt/qvaluecombobox.h \
   qt/receivecoinsdialog.h \
   qt/receiverequestdialog.h \
+  qt/receivetokenpage.h \
   qt/recentrequeststablemodel.h \
+  qt/removedelegationpage.h \
+  qt/restoredialog.h \
   qt/rpcconsole.h \
   qt/sendcoinsdialog.h \
   qt/sendcoinsentry.h \
+  qt/sendtocontract.h \
+  qt/sendtokenpage.h \
   qt/sendcoinsrecipient.h \
   qt/signverifymessagedialog.h \
   qt/splashscreen.h \
@@ -537,7 +542,7 @@ endif # ENABLE_WALLET
 
 QT_RES_ANIMATION = $(wildcard $(srcdir)/qt/res/animation/spinner-*.png)
 
-RES_TOKENS = qt/res/tokens/6b8bf98ff497c064e8f0bde13e0c4f5ed5bf8ce7.png \
+QT_RES_TOKENS = qt/res/tokens/6b8bf98ff497c064e8f0bde13e0c4f5ed5bf8ce7.png \
 qt/res/tokens/9d3d4cc1986d81f9109f2b091b7732e7d9bcf63b.png \
 qt/res/tokens/57931faffdec114056a49adfcaa1caac159a1a25.png \
 qt/res/tokens/09800417b097c61b9fd26b3ddde4238304a110d5.png \
@@ -549,7 +554,7 @@ qt/res/tokens/f2033ede578e17fa6231047265010445bca8cf1c.png \
 qt/res/tokens/f2703e93f87b846a7aacec1247beaec1c583daa4.png \
 qt/res/tokens/fe59cbc1704e89a698571413a81f0de9d8f00c69.png
 
-RES_STYLES = qt/res/styles/theme1/buttontransparentbordered.css \
+QT_RES_STYLES = qt/res/styles/theme1/buttontransparentbordered.css \
 qt/res/styles/theme1/buttondark.css \
 qt/res/styles/theme1/navgroupbutton.css \
 qt/res/styles/theme1/navbutton.css \
@@ -665,7 +670,7 @@ qt_libbitcoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 qt_libbitcoinqt_a_OBJCXXFLAGS = $(AM_OBJCXXFLAGS) $(QT_PIE_FLAGS)
 
 qt_libbitcoinqt_a_SOURCES = $(BITCOIN_QT_CPP) $(BITCOIN_QT_H) $(QT_FORMS_UI) \
-  $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(RES_TOKENS) $(RES_STYLES) $(RES_LEDGER)
+  $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(QT_RES_TOKENS) $(QT_RES_STYLES)
 if TARGET_DARWIN
   qt_libbitcoinqt_a_SOURCES += $(BITCOIN_MM)
 endif
@@ -691,7 +696,7 @@ if TARGET_WINDOWS
 endif
 qtum_qt_ldadd = qt/libbitcoinqt.a $(LIBBITCOIN_NODE)
 if ENABLE_WALLET
-qtum_qt_ldadd += $(LIBBITCOIN_UTIL) $(LIBBITCOIN_WALLET)
+qtum_qt_ldadd += $(LIBBITCOIN_UTIL) $(LIBBITCOIN_WALLET) $(LIBBITCOIN_NODE)
 endif
 if ENABLE_ZMQ
 qtum_qt_ldadd += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
@@ -741,7 +746,7 @@ $(QT_QRC_LOCALE_CPP): $(QT_QRC_LOCALE) $(QT_QM)
 	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(RCC) -name bitcoin_locale --format-version 1 $(@D)/temp_$(<F) > $@
 	@rm $(@D)/temp_$(<F)
 
-$(QT_QRC_CPP): $(QT_QRC) $(QT_FORMS_H) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(RES_TOKENS) $(RES_STYLES) $(RES_LEDGER)
+$(QT_QRC_CPP): $(QT_QRC) $(QT_FORMS_H) $(QT_RES_FONTS) $(QT_RES_ICONS) $(QT_RES_ANIMATION) $(QT_RES_TOKENS) $(QT_RES_STYLES)
 	@test -f $(RCC)
 	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(RCC) -name bitcoin --format-version 1 $< > $@
 
@@ -750,7 +755,7 @@ CLEAN_QT = $(nodist_qt_libbitcoinqt_a_SOURCES) $(QT_QM) $(QT_FORMS_H) qt/*.gcda 
 CLEANFILES += $(CLEAN_QT)
 
 qtum_qt_clean: FORCE
-	rm -f $(CLEAN_QT) $(qt_libbitcoinqt_a_OBJECTS) $(qt_qtum_qt_OBJECTS) qt/bitcoin-qt$(EXEEXT) $(LIBBITCOINQT)
+	rm -f $(CLEAN_QT) $(qt_libbitcoinqt_a_OBJECTS) $(qt_qtum_qt_OBJECTS) qt/qtum-qt$(EXEEXT) $(LIBBITCOINQT)
 
 qtum_qt : qt/qtum-qt$(EXEEXT)
 
@@ -764,7 +769,7 @@ qtum_qt_apk: FORCE
 	cp $(dir $(lastword $(CC)))../sysroot/usr/lib/$(host_alias)/libc++_shared.so $(APK_LIB_DIR)
 	tar xf $(QT_BASE_PATH) -C qt/android/src/ $(QT_BASE_TLD)src/android/jar/src --strip-components=5
 	tar xf $(QT_BASE_PATH) -C qt/android/src/ $(QT_BASE_TLD)src/android/java/src --strip-components=5
-	cp qt/bitcoin-qt $(APK_LIB_DIR)/libbitcoin-qt_$(ANDROID_ARCH).so
+	cp qt/qtum-qt $(APK_LIB_DIR)/libbitcoin-qt_$(ANDROID_ARCH).so
 	cd qt/android && gradle wrapper --gradle-version=6.6.1
 	cd qt/android && ./gradlew build
 
