Add eth chain id unit tests

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -185,7 +185,8 @@ BITCOIN_TESTS =\
   test/qtumtests/delegations_tests.cpp \
   test/qtumtests/istanbulfork_tests.cpp \
   test/qtumtests/londonfork_tests.cpp \
-  test/qtumtests/evmone_tests.cpp
+  test/qtumtests/evmone_tests.cpp \
+  test/qtumtests/shanghaifork_tests.cpp
 
 
 if ENABLE_WALLET
